Fix: Replace List.of() with Collections.emptyList() for Java 1.8 compatibility
Replaced `List.of()` calls in `MindMapServiceImpl.java` with
`java.util.Collections.emptyList()` to ensure compatibility with Java 1.8,
resolving "cannot find symbol" compilation errors.